# termio

./: Cargo.toml  README.md
termio/: Cargo.toml
termio-ui/: Cargo.toml
termio-ui/src/: lib.rs  main.rs
termio-ui/src/gtk_ui/: mod.rs  spawn_ui.rs
termio-ui/src/windowing/: window.rs
termio-unix/: Cargo.toml
termio-windows/: Cargo.toml
