[workspace]
default-member = ["termio"]
members = ["termio", "termio-windows", "termio-unix"]
resolver = "1"

[workspace.package]
name = "termio"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
termio = { path = "termio"}
nix = { version = "0.30.1", features = ["hostname", "term"] }
termio-ui ={ path = "termio-ui"}
gtk = { version = "0.9.7", package = "gtk4" }