[workspace]
default-member = ["termio"]
members = ["termio", "termio-windows"]
resolver = "1"

[workspace.package]
name = "termio"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
termio = { path = "termio"}
nix = { version = "0.30.1", features = ["hostname", "term"] }
winit = "0.30.11"
termio-ui = { path = "termio-ui"}